@@ -1,7 +1,6 @@
 package io.john.amiscaray.backend.framework.core.di;
 
 import io.john.amiscaray.backend.framework.core.di.dependency.DependencyID;
-import io.john.amiscaray.backend.framework.core.di.exception.ContextInitializationException;
 import io.john.amiscaray.backend.framework.core.di.exception.DependencyInstantiationException;
 import io.john.amiscaray.backend.framework.core.di.exception.DependencyResolutionException;
 import io.john.amiscaray.backend.framework.core.di.exception.ProviderMissingConstructorException;
@@ -17,7 +16,6 @@ import org.slf4j.LoggerFactory;
 import java.lang.reflect.*;
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class ApplicationContext {
@@ -41,12 +39,20 @@ public class ApplicationContext {
         var managedInstances = reflections.getTypesAnnotatedWith(ManagedType.class)
                 .stream()
                 .toList();
-        var executablesToCall = Stream.concat(Stream.concat(
-                providers.stream().flatMap(provider -> Stream.of(provider.getMethods())).filter(method -> method.isAnnotationPresent(Provide.class)),
-                providers.stream().map(this::getProviderConstructor)
-        ), managedInstances.stream().map(this::getManagedInstanceConstructor));
-        buildInitialDependencyGraph(executablesToCall.collect(Collectors.toList()));
-        loadDependenciesFromStartupDependencyProviders();
+        var dependencyProviders = new ArrayList<DependencyProvider<?>>(providers.stream()
+                .map(this::getProviderConstructor)
+                .map(ConstructorDependencyProvider::new)
+                .toList());
+        dependencyProviders.addAll(providers.stream()
+                .flatMap(provider -> Stream.of(provider.getMethods()))
+                .filter(method -> method.isAnnotationPresent(Provide.class))
+                .map(MethodDependencyProvider::new)
+                .toList()
+        );
+        dependencyProviders.addAll(managedInstances.stream().map(this::getManagedInstanceConstructor).map(ConstructorDependencyProvider::new).toList());
+        dependencyProviders.addAll(ServiceLoader.load(DependencyProvider.class).stream().map(ServiceLoader.Provider::get).map(provider -> (DependencyProvider<?>) provider).toList());
+
+        buildDependencyGraph(dependencyProviders);
     }
 
     private Constructor<?> getManagedInstanceConstructor(Class<?> managedInstanceClass) {
@@ -73,85 +79,33 @@ public class ApplicationContext {
                 .findFirst().orElseThrow(() -> new ProviderMissingConstructorException(providerClass));
     }
 
-    private void buildInitialDependencyGraph(List<Executable> executables) {
+    private void buildDependencyGraph(List<DependencyProvider<?>> dependencyProviders) {
         var canSatisfyDependencies = false;
-        Predicate<Executable> executableHasItsDependenciesSatisfied = executable -> {
-           var allParametersSatisfied = Arrays.stream(executable.getParameters())
-                .allMatch(parameter -> {
-                    var parameterDependencyName = getParameterDependencyName(parameter);
-                    return instances.keySet()
-                            .stream()
-                            .anyMatch(key -> {
-                                var couldDependencyBeUsed = key.type().equals(ClassUtils.primitiveToWrapper(parameter.getType()));
-                                if (!parameterDependencyName.isEmpty()) {
-                                    couldDependencyBeUsed &= key.name().equals(parameterDependencyName);
-                                }
-                                return couldDependencyBeUsed;
-                            });
-                });
-           var ifMethodThenDeclaringClassIsSatisfied = executable instanceof Constructor<?> || hasInstance(executable.getDeclaringClass());
-           return allParametersSatisfied && ifMethodThenDeclaringClassIsSatisfied;
+        Predicate<DependencyProvider<?>> providerHasItsDependenciesSatisfied = provider -> {
+            List<DependencyID<?>> dependencies = provider.getDependencies();
+            return dependencies.stream()
+                    .allMatch(dependency -> dependency.name().isEmpty() ? hasInstance(dependency.type()) : hasInstance(dependency));
         };
         do {
-            executables.stream().filter(executableHasItsDependenciesSatisfied)
+            dependencyProviders.stream().filter(providerHasItsDependenciesSatisfied)
                     .findFirst()
-                    .ifPresent(executable -> {
-                        var returnType = ClassUtils.primitiveToWrapper((Class<?>) executable.getAnnotatedReturnType().getType());
-                        try {
-                            var returnedInstance = switch (executable) {
-                                case Method method -> {
-                                    if (method.getParameters().length == 0) {
-                                        yield method.invoke(getInstance(method.getDeclaringClass()));
-                                    }
-                                    yield method.invoke(getInstance(method.getDeclaringClass()), fetchInstancesOfParameters(method.getParameters()));
-                                }
-                                case Constructor<?> constructor -> {
-                                    if (constructor.getParameters().length == 0) {
-                                        yield constructor.newInstance();
-                                    }
-                                    yield constructor.newInstance(fetchInstancesOfParameters(constructor.getParameters()));
-                                }
-                            };
-                            var dependencyName = executable.isAnnotationPresent(Provide.class) ?
-                                    executable.getAnnotation(Provide.class).dependencyName() :
-                                    "";
-                            if (dependencyName.isEmpty()) {
-                                dependencyName = executable.getName();
-                            }
-                            instances.put(new DependencyID<>(dependencyName, returnType), returnedInstance);
-                        } catch (InvocationTargetException | IllegalAccessException |
-                                 InstantiationException e) {
-                            throw new ContextInitializationException(e);
-                        }
-                        executables.remove(executable);
+                    .ifPresent(provider -> {
+                        var providedInstance = provider.provideDependency(this);
+                        instances.put(providedInstance.id(), providedInstance.instance());
+                        dependencyProviders.remove(provider);
                     });
-            canSatisfyDependencies = executables.stream()
-                    .anyMatch(executableHasItsDependenciesSatisfied);
+            canSatisfyDependencies = dependencyProviders.stream()
+                    .anyMatch(providerHasItsDependenciesSatisfied);
         } while (canSatisfyDependencies);
 
-        if (!executables.isEmpty()) {
+        if (!dependencyProviders.isEmpty()) {
             var missingDependencies = new HashSet<Class<?>>();
-            for (var executable : executables) {
-                missingDependencies.addAll(Arrays.stream(executable.getParameters())
-                        .map(Parameter::getType)
+            for (var provider : dependencyProviders) {
+                missingDependencies.addAll(provider.getDependencies().stream()
+                        .map(DependencyID::type)
                         .filter(type -> !hasInstance(type)).toList());
-                if (executable instanceof Method method && !hasInstance(method.getDeclaringClass())) {
-                    missingDependencies.add(method.getDeclaringClass());
-                }
             }
             throw new DependencyResolutionException(missingDependencies);
-        }
-    }
-
-    private void loadDependenciesFromStartupDependencyProviders() {
-        var startupDependencyProviders = ServiceLoader.load(DependencyProvider.class);
-
-        for (var dependencyProvider : startupDependencyProviders) {
-            var dependency = dependencyProvider.provideDependency(this);
-            if (instances.containsKey(dependency.id())) {
-                LOG.warn("StartupDependencyProvider {} overrides existing dependency with ID {}", dependencyProvider.getClass().getName(), dependency.id());
-            }
-            instances.put(dependency.id(), dependency.instance());
         }
     }
 
